--- a/s/a.html
+++ b/s/a.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>错误</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<div class="container">
+		<h1>访问出错</h1>
+        <p>此页面正在制作中......</p>
+    </div>
+</body>
+</html>
