--- a/d/a.html
+++ b/d/a.html
@@ -70,12 +70,12 @@
                         <ul class="navigation clearfix">
                             
                             <li class="current"><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#resume">Resume</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#work">Works</a></li>
-                            <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#about">关于</a></li>
+                            <li><a href="#resume">故事</a></li>
+                            <li><a href="#services">服务</a></li>
+                            <li><a href="#work">作品s</a></li>
+                            <li><a href="#blog">博客</a></li>
+                            <li><a href="#contact">联系</a></li>
 
                          </ul>
                     </div>
