--- a/d/a.html
+++ b/d/a.html
@@ -75,37 +75,31 @@
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
                         <div class="image"><img src="images/resource/user.png" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>Furry 拾玖</h3>
                             <div class="designation">
-                                Hi i’m
+                               你好，我是
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
-                                    <p>a <strong>photographer.</strong></p>
+                                    <p>a <strong>拾玖</strong></p>
+                                    <p>a <strong>一只Furry</strong></p>
+                                    <p>a <strong>一条理科狗</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
                         </div>
                         <div class="link-btn">
-                            <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">Download CV</a>
+                            <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
                         </div>
-                        <ul class="social-icon-two">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                        </ul>
                     </div>
                     <div class="card-inner-box">
                         <header class="header wow fadeInLeft" data-wow-duration="1.5s">
                             <ul class="main-menu">
                                 <li class="active home"><a class="logo" href="#home"><img src="images/logo.png" alt=""></a></li>
-                                <li><a href="#about"><i class="flaticon-social"></i>About</a></li>
-                                <li><a href="#resume"><i class="flaticon-curriculum"></i>Resume</a></li>
-                                <li><a href="#services"><i class="flaticon-layers-1"></i>Services</a></li>
-                                <li><a href="#work"><i class="flaticon-tools"></i>Works</a></li>
-                                <li><a href="#blog"><i class="flaticon-blog"></i>Blog</a></li>
-                                <li><a href="#contact"><i class="flaticon-send-mail"></i>Contact</a></li>
+                                <li><a href="#about"><i class="flaticon-social"></i>关于</a></li>
+                                <li><a href="#resume"><i class="flaticon-curriculum"></i>故事</a></li>
+                                <li><a href="#services"><i class="flaticon-layers-1"></i>服务</a></li>
+                                <li><a href="#work"><i class="flaticon-tools"></i>作品</a></li>
+                                <li><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
+                                <li><a href="#contact"><i class="flaticon-send-mail"></i>联系t</a></li>
                             </ul>
                         </header>
 
@@ -115,29 +109,22 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Mahira Rashid</h3>
+                                    <h3>Furry 拾玖</h3>
                                     <div class="designation">
-                                        Hi i’m
+                                        你好，我是
                                         <div class="typing-title">
-                                            <p>a <strong>web developer.</strong></p>
-                                            <p>a <strong>web Designer.</strong></p>
-                                            <p>a <strong>photographer.</strong></p>
+                                            <p>a <strong>拾玖</strong></p>
+                                            <p>a <strong>一只Furry</strong></p>
+                                            <p>a <strong>一条理科狗</strong></p>
                                         </div>
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim minim veniam.</div>
+                                <div class="text">I am a Furry.You can call me Shi Jiu，although this isn't my real name........</div>
                                 <div class="link-btn">
-                                    <a href="#" class="theme-btn btn-style-one">Download CV</a>
-                                    <a href="#" class="theme-btn btn-style-two">Hire Me</a>
+                                    <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
+                                    <a href="https://qm.qq.com/q/LRwTdU8NO2" class="theme-btn btn-style-two">qq</a>
                                 </div>
-                                <ul class="social-icon-two">
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
-                                </ul>
                             </div>
                             
                         </div>
@@ -146,21 +133,20 @@
                         <!-- card item -->
                         <div class="card-about card-item" id="about" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
-                                <h4 class="title">About Me</h4>
-                                <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip commodo reprehenderit.</div>
+                                <h4 class="title">关于我</h4>
+                                <div class="text">I am a Furry.You can call me Shi Jiu，although this isn't my real name........</div>
                                 <div class="info-list">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Name:</strong>  Mahira Rashid</li>
-                                                <li><strong>Phone:</strong>  254 - 2563 - 2154</li>
-                                                <li><strong>Address:</strong>  San francisco, USA</li>
+                                                <li><strong>设名:</strong>  拾玖</li>
+                                                <li><strong>电话:</strong>  未公开</li>
+                                                <li><strong>地址:</strong>  中国 贵州 铜仁</li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Email:</strong>  mahirarashid@gmail.com</li>
-                                                <li><strong>Freelance:</strong>  Available</li>
+                                                <li><strong>Email:</strong>  a23710656@163.com</li>
                                             </ul>
                                         </div>
                                     </div>
