--- a/d/a.html
+++ b/d/a.html
@@ -79,9 +79,9 @@
                             <div class="designation">
                                你好，我是
                                 <div class="typing-title">
-                                    <p>a <strong>拾玖</strong></p>
-                                    <p>a <strong>一只Furry</strong></p>
-                                    <p>a <strong>一条理科狗</strong></p>
+                                    <p> <strong>拾玖</strong></p>
+                                    <p> <strong>一只Furry</strong></p>
+                                    <p> <strong>一条理科狗</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
@@ -113,9 +113,9 @@
                                     <div class="designation">
                                         你好，我是
                                         <div class="typing-title">
-                                            <p>a <strong>拾玖</strong></p>
-                                            <p>a <strong>一只Furry</strong></p>
-                                            <p>a <strong>一条理科狗</strong></p>
+                                            <p> <strong>拾玖</strong></p>
+                                            <p> <strong>一只Furry</strong></p>
+                                            <p> <strong>一条理科狗</strong></p>
                                         </div>
                                         <span class="typed-title"></span>
                                     </div>
