--- a/d/a.html
+++ b/d/a.html
@@ -123,7 +123,7 @@
                                 <div class="text">I am a Furry.You can call me Shi Jiu，although this isn't my real name........</div>
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
-                                    <a href="https://qm.qq.com/q/LRwTdU8NO2" class="theme-btn btn-style-two">qq</a>
+                                    <a href="https://tool.gljlw.com/qq/?qq=2371065680" class="theme-btn btn-style-two">qq</a>
                                 </div>
                             </div>
                             
@@ -160,7 +160,7 @@
                                                 <input type="text" class="dial" data-fgColor="#9147ff" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
                                                 <div class="inner-text count-box"><span class="count-text" data-stop="75" data-speed="2000"></span>%</div>
                                             </div>
-                                            <h3>Design</h3>
+                                            <h3>二次元</h3>
                                         </div>
                                     </div>
 
@@ -182,7 +182,7 @@
                                                 <input type="text" class="dial" data-fgColor="#ffc713" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
                                                 <div class="inner-text count-box"><span class="count-text" data-stop="75" data-speed="2000"></span>%</div>
                                             </div>
-                                            <h3>WordPress </h3>
+                                            <h3>学习 </h3>
                                         </div>
                                     </div>
 
@@ -193,7 +193,7 @@
                                                 <input type="text" class="dial" data-fgColor="#51dbc3" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
                                                 <div class="inner-text count-box"><span class="count-text" data-stop="75" data-speed="2000"></span>%</div>
                                             </div>
-                                            <h3>PHP </h3>
+                                            <h3>游戏 </h3>
                                         </div>
                                     </div>
                                 </div>
