--- a/d/a.html
+++ b/d/a.html
@@ -99,7 +99,7 @@
                                 <li><a href="#services"><i class="flaticon-layers-1"></i>服务</a></li>
                                 <li><a href="#work"><i class="flaticon-tools"></i>作品</a></li>
                                 <li><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
-                                <li><a href="#contact"><i class="flaticon-send-mail"></i>联系t</a></li>
+                                <li><a href="#contact"><i class="flaticon-send-mail"></i>联系</a></li>
                             </ul>
                         </header>
 
