--- a/d/a.html
+++ b/d/a.html
@@ -215,58 +215,17 @@
                         <!-- card item -->
                         <div class="card-services card-item" id="services" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
-                                <h4 class="title">Services</h4>
-                                <div class="row">
-                                    <div class="services-block col-md-6">
-                                        <div class="inner-box">
-                                            <div class="icon-box"><span class="icon flaticon-pen-tool"></span></div>
-                                            <h4><a href="blog-single.html">UI/UX Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
-                                        </div> 
-                                    </div>
-                                    <div class="services-block col-md-6">
-                                        <div class="inner-box">
-                                            <div class="icon-box"><span class="icon flaticon-folder"></span></div>
-                                            <h4><a href="blog-single.html">Web Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
-                                        </div> 
-                                    </div>
-                                    <div class="services-block col-md-6">
-                                        <div class="inner-box">
-                                            <div class="icon-box"><span class="icon flaticon-computer"></span></div>
-                                            <h4><a href="blog-single.html">Branding</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
-                                        </div> 
-                                    </div>
-                                    <div class="services-block col-md-6">
-                                        <div class="inner-box">
-                                            <div class="icon-box"><span class="icon flaticon-layers-1"></span></div>
-                                            <h4><a href="blog-single.html">Logo Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
-                                        </div> 
-                                    </div>
-                                    <div class="services-block col-md-6">
-                                        <div class="inner-box">
-                                            <div class="icon-box"><span class="icon flaticon-web-design"></span></div>
-                                            <h4><a href="blog-single.html">Apps Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
-                                        </div> 
-                                    </div>
-                                    <div class="services-block col-md-6">
-                                        <div class="inner-box">
-                                            <div class="icon-box"><span class="icon flaticon-photo-camera"></span></div>
-                                            <h4><a href="blog-single.html">Photography</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
-                                        </div> 
-                                    </div>
-                                </div>
+                                <h4 class="title">行业</h4>
+                            </div>
+                            <div>
+                             <p>这么小，怎么可能上班 uwu</p>
                             </div>
                         </div>
                         <!-- end item -->
                         <!-- card item -->
                         <div class="card-projects card-item" id="work" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
-                                <h4 class="title">Works</h4>
+                                <h4 class="title">作品</h4>
                                 <div class="row">
                                     <div class="projects-block col-md-6">
                                         <div class="inner-box">
