--- a/d/a.html
+++ b/d/a.html
@@ -54,7 +54,7 @@
                             <li class="current"><a href="#home">Home</a></li>
                             <li><a href="#about">关于</a></li>
                             <li><a href="#resume">故事</a></li>
-                            <li><a href="#services">服务</a></li>
+                            <li><a href="#services">行业</a></li>
                             <li><a href="#work">作品s</a></li>
                             <li><a href="#blog">博客</a></li>
                             <li><a href="#contact">联系</a></li>
@@ -96,7 +96,7 @@
                                 <li class="active home"><a class="logo" href="#home"><img src="images/logo.png" alt=""></a></li>
                                 <li><a href="#about"><i class="flaticon-social"></i>关于</a></li>
                                 <li><a href="#resume"><i class="flaticon-curriculum"></i>故事</a></li>
-                                <li><a href="#services"><i class="flaticon-layers-1"></i>服务</a></li>
+                                <li><a href="#services"><i class="flaticon-layers-1"></i>行业</a></li>
                                 <li><a href="#work"><i class="flaticon-tools"></i>作品</a></li>
                                 <li><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
                                 <li><a href="#contact"><i class="flaticon-send-mail"></i>联系</a></li>
