--- a/d/blog-single.html
+++ b/d/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mahira | VCard | CV HTML Template</title>
+<title>拾玖的个人博客</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -52,12 +52,12 @@
                         <ul class="navigation clearfix">
                             
                             <li class="current"><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
+                            <li><a href="#about">关于</a></li>
                             <li><a href="#resume">Resume</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#work">Works</a></li>
-                            <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#services">行业</a></li>
+                            <li><a href="#work">文章</a></li>
+                            <li><a href="#blog">博客</a></li>
+                            <li><a href="#contact">联系</a></li>
 
                          </ul>
                     </div>
@@ -75,32 +75,26 @@
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
                         <div class="image"><img src="images/resource/user.png" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>Furry 拾玖</h3>
                             <div class="designation">
-                                Hi i’m
+                                你好，我是
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
-                                    <p>a <strong>photographer.</strong></p>
+                                    <p>a <strong>拾玖</strong></p>
+                                    <p>a <strong>一只Furry</strong></p>
+                                    <p>a <strong>一条理科狗</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
                         </div>
                         <div class="link-btn">
-                            <a href="#" class="theme-btn btn-style-one">Download CV</a>
+                            <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
                         </div>
-                        <ul class="social-icon-two">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                        </ul>
                     </div>
                     <div class="card-inner-box offsetleft">
                         <header class="header">
                             <ul class="main-menu">
-                                <li class="home"><a class="logo" href="index.html"><img src="images/logo.png" alt=""></a></li>
-                                <li class="active"><a href="#blog"><i class="flaticon-blog"></i>Blog</a></li>
+                                <li class="home"><a class="logo" href="a.html"><img src="images/logo.png" alt=""></a></li>
+                                <li class="active"><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
                             </ul>
                         </header>
 
