--- a/d/a.html
+++ b/d/a.html
@@ -238,8 +238,8 @@
                                                 </div>
                                             </figure>
                                             <div class="caption-title">
-                                                <h3><a href="#">Portfolio Item Title</a></h3>
-                                                <span>Branding, Print</span>
+                                                <h3><a href="#">记录生活</a></h3>
+                                                <span>单击放大查看</span>
                                             </div>
                                         </div>
                                     </div>
@@ -254,8 +254,8 @@
                                                 </div>
                                             </figure>
                                             <div class="caption-title">
-                                                <h3><a href="#">Portfolio Item Title</a></h3>
-                                                <span>Branding, Print</span>
+                                                <h3><a href="#">记录生活</a></h3>
+                                                <span>单击放大查看</span>
                                             </div>
                                         </div>
                                     </div>
@@ -270,8 +270,8 @@
                                                 </div>
                                             </figure>
                                             <div class="caption-title">
-                                                <h3><a href="#">Portfolio Item Title</a></h3>
-                                                <span>Branding, Print</span>
+                                                <h3><a href="#">记录生活</a></h3>
+                                                <span>单击放大查看</span>
                                             </div>
                                         </div>
                                     </div>
@@ -286,8 +286,8 @@
                                                 </div>
                                             </figure>
                                             <div class="caption-title">
-                                                <h3><a href="#">Portfolio Item Title</a></h3>
-                                                <span>Branding, Print</span>
+                                                <h3><a href="#">记录生活</a></h3>
+                                                <span>单击放大查看</span>
                                             </div>
                                         </div>
                                     </div>
@@ -302,8 +302,8 @@
                                                 </div>
                                             </figure>
                                             <div class="caption-title">
-                                                <h3><a href="#">Portfolio Item Title</a></h3>
-                                                <span>Branding, Print</span>
+                                                <h3><a href="#">记录生活</a></h3>
+                                                <span>单击放大查看</span>
                                             </div>
                                         </div>
                                     </div>
@@ -318,8 +318,8 @@
                                                 </div>
                                             </figure>
                                             <div class="caption-title">
-                                                <h3><a href="#">Portfolio Item Title</a></h3>
-                                                <span>Branding, Print</span>
+                                                <h3><a href="#">记录生活</a></h3>
+                                                <span>单击放大查看</span>
                                             </div>
                                         </div>
                                     </div>
