--- a/d/a.html
+++ b/d/a.html
@@ -390,8 +390,8 @@
                             <div class="card-inner">
                                 <h3 class="title">Contact</h3>
                              <div class="link-btn">
-                                    <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
-                                    <a href="https://tool.gljlw.com/qq/?qq=2371065680" class="theme-btn btn-style-two">   qq   </a>
+                                    <p><a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a></p>
+                                    <p><a href="https://tool.gljlw.com/qq/?qq=2371065680" class="theme-btn btn-style-two">   qq   </a></p>
                              </div>
                                 <!--End Contact Form -->
                                         
