--- a/d/a.html
+++ b/d/a.html
@@ -16,6 +16,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+ <style>
+  #a1{
+   background-color:black;
+   color:white;
+   width:350px;
+   height:80px;
+  }
+ </style>
 </head>
 
 <body>
@@ -390,9 +398,9 @@
                             <div class="card-inner">
                                 <h3 class="title">Contact</h3>
                              <div class="link-btn">
-                                    <p><a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a></p>
+                                    <p><a id="a1" href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a></p>
                               <p></p>
-                                    <p><a href="https://tool.gljlw.com/qq/?qq=2371065680" class="theme-btn btn-style-two">   qq   </a></p>
+                                    <p><a id="a1" href="https://tool.gljlw.com/qq/?qq=2371065680" class="theme-btn btn-style-two">qq</a></p>
                              </div>
                                 <!--End Contact Form -->
                                         
