--- a/d/a.html
+++ b/d/a.html
@@ -65,7 +65,7 @@
                             <li><a href="#services">行业</a></li>
                             <li><a href="#work">作品s</a></li>
                             <li><a href="#blog">博客</a></li>
-                            <li><a href="#home">联系</a></li>
+                            <li class="current"><a href="#home">联系</a></li>
 
                          </ul>
                     </div>
@@ -107,7 +107,7 @@
                                 <li><a href="#services"><i class="flaticon-layers-1"></i>行业</a></li>
                                 <li><a href="#work"><i class="flaticon-tools"></i>作品</a></li>
                                 <li><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
-                                <li><a href="#home"><i class="flaticon-send-mail"></i>联系</a></li>
+                                <li class="active home"><a href="#home"><i class="flaticon-send-mail"></i>联系</a></li>
                             </ul>
                         </header>
 
