--- a/d/a.html
+++ b/d/a.html
@@ -65,7 +65,7 @@
                             <li><a href="#services">行业</a></li>
                             <li><a href="#work">作品s</a></li>
                             <li><a href="#blog">博客</a></li>
-                            <li class="current"><a href="#home">联系</a></li>
+                            <li><a href="#home">联系</a></li>
 
                          </ul>
                     </div>
