--- a/d/a.html
+++ b/d/a.html
@@ -65,7 +65,7 @@
                             <li><a href="#services">行业</a></li>
                             <li><a href="#work">作品s</a></li>
                             <li><a href="#blog">博客</a></li>
-                            <li><a href="#home">联系</a></li>
+                            <li><a href="#contact">联系</a></li>
 
                          </ul>
                     </div>
@@ -107,7 +107,7 @@
                                 <li><a href="#services"><i class="flaticon-layers-1"></i>行业</a></li>
                                 <li><a href="#work"><i class="flaticon-tools"></i>作品</a></li>
                                 <li><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
-                                <li class="active home"><a href="#home"><i class="flaticon-send-mail"></i>联系</a></li>
+                                <li><a href="#contact"><i class="flaticon-send-mail"></i>联系</a></li>
                             </ul>
                         </header>
 
@@ -396,7 +396,11 @@
                         <!-- card item -->
                         <div class="card-contact card-item" id="contact" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
-                                <h3 class="title">Contact</h3>
+                                <h3 class="title">联系</h3>
+                                <div class="link-btn">
+                                    <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
+                                    <a href="https://tool.gljlw.com/qq/?qq=2371065680" class="theme-btn btn-style-two">qq</a>
+                                </div>
                                 <!--End Contact Form -->
                                         
                             </div>
