--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         function checkDevice() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
             if (/android|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(userAgent.toLowerCase())) {
-                window.location.href = 'https://dongguacc.github.io/FurryShiJiu/s/a';
+                window.location.href = 'https://dongguacc.github.io/FurryShiJiu/d/aa';
             } else {
                 window.location.href = 'https://dongguacc.github.io/FurryShiJiu/d/a';
             }
