--- a/d/blog-single.html
+++ b/d/blog-single.html
@@ -93,7 +93,7 @@
                     <div class="card-inner-box offsetleft">
                         <header class="header">
                             <ul class="main-menu">
-                                <li class="home"><a class="logo" href="a.html"><img src="images/logo.png" alt=""></a></li>
+                                <li class="home"><a class="logo" href="https://dongguacc.github.io/FurryShiJiu/"><img src="images/logo.png" alt=""></a></li>
                                 <li class="active"><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
                             </ul>
                         </header>
