--- a/d/blog-single.html
+++ b/d/blog-single.html
@@ -36,7 +36,7 @@
         <div class="container">
             <!--Nav Outer-->
             <div class="nav-outer clearfix">
-                <div class="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
+                <div class="logo"><a href="https://dongguacc.github.io/FurryShiJiu/"><img src="images/logo.png" alt=""></a></div>
                 <!-- Main Menu -->
                 <nav class="main-menu">
                     <div class="navbar-header">
@@ -53,9 +53,9 @@
                             
                             <li class="current"><a href="#home">Home</a></li>
                             <li><a href="#about">关于</a></li>
-                            <li><a href="#resume">Resume</a></li>
+                            <li><a href="#resume">故事</a></li>
                             <li><a href="#services">行业</a></li>
-                            <li><a href="#work">文章</a></li>
+                            <li><a href="#work">作品</a></li>
                             <li><a href="#blog">博客</a></li>
                             <li><a href="#contact">联系</a></li>
 
