--- a/d/aa.html
+++ b/d/aa.html
@@ -63,7 +63,7 @@
                             <li><a href="#about">关于</a></li>
                             <li><a href="#resume">故事</a></li>
                             <li><a href="#services">行业</a></li>
-                            <li><a href="#work">作品s</a></li>
+                            <li><a href="#work">作品</a></li>
                             <li><a href="#blog">博客</a></li>
                             <li><a href="#contact">联系</a></li>
 
