--- a/d/aa.html
+++ b/d/aa.html
@@ -44,7 +44,7 @@
         <div class="container">
             <!--Nav Outer-->
             <div class="nav-outer clearfix">
-                <div class="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
+                <div class="logo"><a href="https://dongguacc.github.io/FurryShiJiu/"><img src="images/logo.png" alt=""></a></div>
                 <!-- Main Menu -->
                 <nav class="main-menu">
                     <div class="navbar-header">
