--- a/d/aa.html
+++ b/d/aa.html
@@ -128,7 +128,8 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">I am a Furry.You can call me Shi Jiu，although this isn't my real name........ヾ(≧▽≦*)o</div>
+                                <div class="text">I am a Furry.You can call me Shi Jiu，although this isn't my real name........<br>
+                                 ヾ(≧▽≦*)o</div>
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
                                     <a href="https://tool.gljlw.com/qq/?qq=2371065680" class="theme-btn btn-style-two">qq</a>
