--- a/d/blog-single.html
+++ b/d/blog-single.html
@@ -16,6 +16,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+<script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
 </head>
 
 <body>
