--- a/d/aa.html
+++ b/d/aa.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>拾玖的个人网站</title>
 <script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
+<script src="https://dongguacc.github.io/FurryShiJiu/UA.js"></script>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
