--- a/d/aa.html
+++ b/d/aa.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>拾玖的个人网站</title>
+<meta http-equiv="Content-Language" content="zh-CN">
 <script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
 <script src="https://dongguacc.github.io/FurryShiJiu/UA.js"></script>
 <!-- Stylesheets -->
