--- a/d/blog-single.html
+++ b/d/blog-single.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta http-equiv="Content-Language" content="zh-CN" />
 <title>拾玖的个人博客</title>
-<meta http-equiv="Content-Language" content="zh-CN">
 <script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
 <script src="https://dongguacc.github.io/FurryShiJiu/UA.js"></script>
 <!-- Stylesheets -->
