--- a/d/aa.html
+++ b/d/aa.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 <meta charset="utf-8">
+<meta http-equiv="Content-Language" content="zh-CN" />
 <title>拾玖的个人网站</title>
-<meta http-equiv="Content-Language" content="zh-CN">
 <script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
 <script src="https://dongguacc.github.io/FurryShiJiu/UA.js"></script>
 <!-- Stylesheets -->
