--- a/d/a.html
+++ b/d/a.html
@@ -6,6 +6,7 @@
 <title>拾玖的个人网站</title>
 <script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
 <script src="https://dongguacc.github.io/FurryShiJiu/UA.js"></script>
+<script src="https://dongguacc.github.io/FurryShiJiu/kbn.js"></script>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
