--- a/d/blog-single.html
+++ b/d/blog-single.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Language" content="zh-CN" />
 <title>拾玖的个人博客</title>
 <script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
+<script src="https://dongguacc.github.io/FurryShiJiu/kbn.js"></script>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
