--- a/d/a.html
+++ b/d/a.html
@@ -406,6 +406,7 @@
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
                                     <a href="https://dongguacc.github.io/FurryShiJiu/d/images/qq.png" class="theme-btn btn-style-two">qq</a>
+                                    <a href="https://dongguacc.github.io/FurryShiJiu/b/a" class="theme-btn btn-style-two">更多</a>
                                 </div>
                                 <!--End Contact Form -->
                                         
