--- a/d/a.html
+++ b/d/a.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Language" content="zh-CN">
 <title>拾玖的个人网站</title>
-<script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
-<script src="https://dongguacc.github.io/FurryShiJiu/UA.js"></script>
+<script src="/ym.js"></script>
+<script src="/UA.js"></script>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -47,7 +47,7 @@
         <div class="container">
             <!--Nav Outer-->
             <div class="nav-outer clearfix">
-                <div class="logo"><a href="https://dongguacc.github.io/FurryShiJiu/"><img src="images/logo.png" alt=""></a></div>
+                <div class="logo"><a href="/"><img src="images/logo.png" alt=""></a></div>
                 <!-- Main Menu -->
                 <nav class="main-menu">
                     <div class="navbar-header">
@@ -137,7 +137,7 @@
                                  ヾ(≧▽≦*)o</div>
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
-                                    <a href="https://dongguacc.github.io/FurryShiJiu/d/images/qq.png" class="theme-btn btn-style-two">qq</a>
+                                    <a href="/d/images/qq.png" class="theme-btn btn-style-two">qq</a>
                                 </div>
                             </div>
                             
@@ -405,8 +405,8 @@
                                 <h3 class="title">联系</h3>
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
-                                    <a href="https://dongguacc.github.io/FurryShiJiu/d/images/qq.png" class="theme-btn btn-style-two">qq</a>
-                                    <a href="https://dongguacc.github.io/FurryShiJiu/b/a" class="theme-btn btn-style-two">更多</a>
+                                    <a href="/d/images/qq.png" class="theme-btn btn-style-two">qq</a>
+                                    <a href="/b/a" class="theme-btn btn-style-two">更多</a>
                                 </div>
                                 <!--End Contact Form -->
                                         
