--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         function checkDevice() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
             if (/android|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(userAgent.toLowerCase())) {
-                window.location.href = 'https://dongguacc.github.io/furry19/d/aa';
+                window.location.href = '/d/aa';
             } else {
-                window.location.href = 'https://dongguacc.github.io/furry19/d/a';
+                window.location.href = '/d/a';
             }
         }
 
