--- a/d/a.html
+++ b/d/a.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Language" content="zh-CN">
 <title>拾玖的个人网站</title>
-<script src="/ym.js"></script>
-<script src="/UA.js"></script>
+<script src="../ym.js"></script>
+<script src="../UA.js"></script>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
