--- a/d/a.html
+++ b/d/a.html
@@ -47,7 +47,7 @@
         <div class="container">
             <!--Nav Outer-->
             <div class="nav-outer clearfix">
-                <div class="logo"><a href="/"><img src="images/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../"><img src="images/logo.png" alt=""></a></div>
                 <!-- Main Menu -->
                 <nav class="main-menu">
                     <div class="navbar-header">
@@ -137,7 +137,7 @@
                                  ヾ(≧▽≦*)o</div>
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
-                                    <a href="/d/images/qq.png" class="theme-btn btn-style-two">qq</a>
+                                    <a href="images/qq.png" class="theme-btn btn-style-two">qq</a>
                                 </div>
                             </div>
                             
@@ -405,8 +405,8 @@
                                 <h3 class="title">联系</h3>
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
-                                    <a href="/d/images/qq.png" class="theme-btn btn-style-two">qq</a>
-                                    <a href="/b/a" class="theme-btn btn-style-two">更多</a>
+                                    <a href="images/qq.png" class="theme-btn btn-style-two">qq</a>
+                                    <a href="../b/a" class="theme-btn btn-style-two">更多</a>
                                 </div>
                                 <!--End Contact Form -->
                                         
