--- a/d/aa.html
+++ b/d/aa.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Language" content="zh-CN" />
 <title>拾玖的个人网站</title>
-<script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
-<script src="https://dongguacc.github.io/FurryShiJiu/UA.js"></script>
+<script src="../ym.js"></script>
+<script src="../UA.js"></script>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -47,7 +47,7 @@
         <div class="container">
             <!--Nav Outer-->
             <div class="nav-outer clearfix">
-                <div class="logo"><a href="https://dongguacc.github.io/FurryShiJiu/"><img src="images/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../"><img src="images/logo.png" alt=""></a></div>
                 <!-- Main Menu -->
                 <nav class="main-menu">
                     <div class="navbar-header">
