--- a/d/blog-single.html
+++ b/d/blog-single.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Language" content="zh-CN" />
 <title>拾玖的个人博客</title>
-<script src="https://dongguacc.github.io/FurryShiJiu/ym.js"></script>
+<script src="../ym.js"></script>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -38,7 +38,7 @@
         <div class="container">
             <!--Nav Outer-->
             <div class="nav-outer clearfix">
-                <div class="logo"><a href="https://dongguacc.github.io/FurryShiJiu/"><img src="images/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../"><img src="images/logo.png" alt=""></a></div>
                 <!-- Main Menu -->
                 <nav class="main-menu">
                     <div class="navbar-header">
