--- a/d/a.html
+++ b/d/a.html
@@ -406,7 +406,7 @@
                                 <div class="link-btn">
                                     <a href="https://space.bilibili.com/1222132945" class="theme-btn btn-style-one">bilibili</a>
                                     <a href="images/qq.png" class="theme-btn btn-style-two">qq</a>
-                                    <a href="../b/a" class="theme-btn btn-style-two">更多</a>
+                                    <a href="../b/index" class="theme-btn btn-style-two">更多</a>
                                 </div>
                                 <!--End Contact Form -->
                                         
