--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         function checkDevice() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
             if (/android|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(userAgent.toLowerCase())) {
-                window.location.href = 'd/aa';
+                window.location.href = 'd/a';
             } else {
                 window.location.href = 'd/a';
             }
