--- a/html/article/1.html
+++ b/html/article/1.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh"> <!-- 声明文档类型和语言 -->
 <head>
-    <meta charset="UTF-8"> <!-- 设置字符编码为 UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 视口设置 -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
     <title>拾玖的个人网站</title> <!-- 文档标题 -->
     <link rel="icon" href="../../src/favicon.png" type="image/x-icon">
     <style>
