--- a/p.html
+++ b/p.html
@@ -227,9 +227,7 @@
                 </script>
             </div>
         </div>
-        <div id="content"> <!-- 内容区 -->
-            <!-- 这里的内容将被加载 -->
-        </div>
+        <div id="content"></div>
     </div>
 
     <div class="footer"> <!-- 页脚 -->
