--- a/w.html
+++ b/w.html
@@ -244,7 +244,7 @@
     <div class="footer"> <!-- 页脚 -->
         <p>版权所有 &copy; 2024 <a href="https://space.bilibili.com/1222132945" target="_new">拾玖</a><br>  <!-- 版权所有信息 -->
         禁止在未授权的情况下使用任何内容，包括但不限于修改源码建站、转载、使用图片、视频等<br> <!-- 版权声明 -->
-        如需学习，可前往<a href="https://github.com/furry19sj/furry19sj.github.io" target="_new">GitHub</a>查看源代码。</p> <!-- GitHub链接 -->
+        如需学习，可<a href="https://github.com/furry19sj/furry19sj.github.io" target="_new">前往GitHub查看源代码</a>。</p> <!-- GitHub链接 -->
     </div>
 </body>
 </html>
