--- a/w.html
+++ b/w.html
@@ -171,7 +171,7 @@
                         <div class="qr-code"> <!-- 二维码盒 -->
                             <p>QQ扫一扫</br>加好友</p> <!-- 二维码提示文本 -->
                             <div title="单击放大"> <!-- 用于放大二维码的提示 -->
-                                <a href="../src/qq.png"><img src="../src/qq.png" alt="二维码" width="100" height="100"></a> <!-- 二维码图片 -->
+                                <a href="../src/qq.png"><img src="src/qq.png" alt="二维码" width="100" height="100"></a> <!-- 二维码图片 -->
                             </div>
                         </div>
                         <a href="https://tool.gljlw.com/qq/?qq=2371065680" target="_new"> <!-- QQ链接 -->
@@ -243,7 +243,7 @@
 
     <div class="footer"> <!-- 页脚 -->
         <p>版权所有 &copy; 2024 <a href="https://space.bilibili.com/1222132945" target="_new">拾玖</a><br>  <!-- 版权所有信息 -->
-        禁止在未授权的情况下使用任何内容，包括但不限于修改源码建站、转载、使用图片、视频等<br> <!-- 版权声明 -->
+        禁止在未授权的情况下使用任何内容，包括但不限于修改源码建站、转载、使用图片、视频等。 <!-- 版权声明 -->
         如需学习，可<a href="https://github.com/furry19sj/furry19sj.github.io" target="_new">前往GitHub查看源代码</a>。</p> <!-- GitHub链接 -->
     </div>
 </body>
