--- a/p.html
+++ b/p.html
@@ -6,7 +6,7 @@
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" /> <!-- 禁用缓存 -->
     <meta http-equiv="pragma" content="no-cache" /> <!-- 禁用缓存 -->
     <meta http-equiv="expires" content="0" /> <!-- 设置过期时间为即时 -->
-    <title>拾玖的个人网站</title> <!-- 设置网页标题 -->
+    <title>拾玖｜个人网站 主页</title> <!-- 设置网页标题 -->
     <link rel="icon" href="src/favicon.png" type="image/x-icon"> <!-- 设置网页图标 -->
     <style>
         body {
