--- a/w.html
+++ b/w.html
@@ -6,7 +6,7 @@
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" /> <!-- 缓存控制，不缓存 -->
     <meta http-equiv="pragma" content="no-cache" /> <!-- 兼容旧版本浏览器，不缓存 -->
     <meta http-equiv="expires" content="0" /> <!-- 设置过期时间为0,表示立即过期 -->
-    <title>拾玖的个人网站</title> <!-- 设置网页标题 -->
+    <title>拾玖｜个人网站 主页</title> <!-- 设置网页标题 -->
     <link rel="icon" href="src/favicon.png" type="image/x-icon"> <!-- 网站标志 -->
     <style>
         body {
