--- a/w.html
+++ b/w.html
@@ -27,8 +27,8 @@
             <ul class="nav-list">
                 <li><a>首页</a></li>
                 <li><a href="about.html">关于</a></li>
-                <li><a href="html/article/1.html">博客</a></li>
-                <li><a href="contact.html">联系</a></li>
+                <li><a href="html\blog.html">博客</a></li>
+                <li><a href="tool/tool.html">工具箱</a></li>
             </ul>
         </div>
         <div id="container">
@@ -109,6 +109,10 @@
                     <p>我将满满的祝福塞在信里，在国庆节之际，寄与母亲。祝您国庆节快乐，国富民强！金秋是收获的季节，金秋是诱人的时刻。愿您收获永远如金秋的硕果，愿你欢笑永远如盛开的鲜花！国庆国庆普天同庆，祝福你在这个和平幸福的年代里节日快乐、身体健康！欣望江山千里秀，欢颂祖国万年春。祝福您，祖国！国庆节快乐！</p>
                 </div>
                 <!-- 普通内容区域 -->
+                <div class="content-box">
+                    <h1>2024/9/28 更新日志</h1>
+                    <p>—制作了工具箱</p>
+                </div>
                 <div class="content-box">
                     <h1>2024/9/27 更新日志</h1>
                     <p>—制作导航栏</p>
