--- a/tool/tool.html
+++ b/tool/tool.html
@@ -127,14 +127,15 @@
             z-index: 99; 
             border: none;
             outline: none; 
-            background-color: red;
+            background-color: #6cc7d9;
+            transition: background 0.3s;
             color: white;
             cursor: pointer; 
             padding: 15px; 
             border-radius: 10px;
         }
         #myBtn:hover {
-            background-color: #555; 
+                background-color: #0056b3;
         }
         .Back-to-top {
             width: 36px;
