--- a/tool/Gluttonous-Snake/Gluttonous-Snake.html
+++ b/tool/Gluttonous-Snake/Gluttonous-Snake.html
@@ -8,6 +8,7 @@
     <script src="Gluttonous-Snake.js" defer></script>
     <link rel="icon" href="../../src/favicon.png" type="image/x-icon">
     <script src="../../js/commonality.js"></script>
+    <script src="../../js/No-cell-phones.js"></script>
     <link rel="stylesheet" type="text/css" href="../../css/commonality.css">
 </head>
 <body>
