--- a/html/article/1.html
+++ b/html/article/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" /> <!-- 禁用缓存 -->
     <meta http-equiv="pragma" content="no-cache" /> <!-- 兼容旧版缓存设置 -->
     <meta http-equiv="expires" content="0" /> <!-- 设置过期时间为0，立即过期 -->
-    <title>拾玖的个人网站</title> <!-- 设置网页标题 -->
+    <title>测试</title> <!-- 设置网页标题 -->
     <link rel="icon" href="../../src/favicon.png" type="image/x-icon"> <!-- 设置网页图标 -->
     <script src="../../js/blog-background.js"></script> <!-- 引入背景脚本 -->
     <script src="../../js/No-cell-phones.js"></script>
