--- a/tool/tool.html
+++ b/tool/tool.html
@@ -224,7 +224,8 @@
     <div class="container">
         <h1>小游戏</h1>
         <button onclick="window.location.href='Gluttonous-Snake/Gluttonous-Snake.html'">贪吃蛇</button>
-        <button onclick="window.location.href='http://webcs.xyz/'">反恐精英</button>
+        <button onclick="window.location.href='http://webcs.xyz/'">反恐精英</button></br>
+        <button onclick="window.location.href='Minecraft/Minecraft-1.8.8.html'">我的世界</button>
     </div>
     <div class="container">
         <h1>工具</h1>
