--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             // 判断是否为移动设备
             if (/Mobi|Android|iPhone|iPad|iPod/i.test(userAgent)) {
                 // 移动设备，跳转到 p.html
-                window.location.href = 'p.html';
+                window.location.href = 'p/p.html';
             } else {
                 // 电脑设备，跳转到 w.html
-                window.location.href = 'w.html';
+                window.location.href = 'w/w.html';
             }
         }
 
