--- a/p/p.html
+++ b/p/p.html
@@ -80,6 +80,10 @@
             </div>
         </div>
         <div id="content"></div>
+        <!-- 查看日志 -->
+        <div class="info-box"><a href="../logs.html">
+            <p>点击查看网站更新日志</p>
+        </a></div>
     </div>
 
     <div class="footer">
