--- a/w/w.html
+++ b/w/w.html
@@ -98,6 +98,10 @@
                         setInterval(updateSiteTimer, 10);
                     </script>
                 </div>
+                    <!-- 查看日志 -->
+                <div class="info-box"><a href="../logs.html">
+                    <p>点击查看网站更新日志</p>
+                </a></div>
             </div>
             
             <div id="content">
@@ -109,26 +113,6 @@
                     <p>我将满满的祝福塞在信里，在国庆节之际，寄与母亲。祝您国庆节快乐，国富民强！金秋是收获的季节，金秋是诱人的时刻。愿您收获永远如金秋的硕果，愿你欢笑永远如盛开的鲜花！国庆国庆普天同庆，祝福你在这个和平幸福的年代里节日快乐、身体健康！欣望江山千里秀，欢颂祖国万年春。祝福您，祖国！国庆节快乐！</p>
                 </div>
                 <!-- 普通内容区域 -->
-                <div class="content-box">
-                    <h1>2024/9/28 更新日志</h1>
-                    <p>—制作了工具箱</p>
-                </div>
-                <div class="content-box">
-                    <h1>2024/9/27 更新日志</h1>
-                    <p>—制作导航栏</p>
-                    <p>—重写js、css代码</p>
-                    <p>—添加了返回顶部按钮</p>
-                </div>
-                <div class="content-box">
-                    <h1>2024/9/20 更新日志</h1>
-                    <p>—修改了布局</p>
-                    <p>—制作手机界面</p>
-                </div>
-                <div class="content-box">
-                    <h1>2024/9/16 网站测试</h1>
-                    <p>欢迎来到拾玖的个人网站，这里将会分享一些个人的兴趣爱好，以及一些技术相关的文章。</p>
-                    <p>网站测试期间，网站将会进行大量的改版，网站的功能将会逐渐增加，欢迎大家的反馈。</p>
-                </div>
             </div>
     </div>
 
