--- a/w/tool/tool.html
+++ b/w/tool/tool.html
@@ -213,9 +213,9 @@
     <div class="nav">
         <ul class="nav-list">
             <li><a href="../../index.html">首页</a></li>
-            <li><a href="#">关于</a></li>
             <li><a href="../html/blog.html">博客</a></li>
             <li><a>工具箱</a></li>
+            <li><a href="https://github.com/furry19sj/furry19sj.github.io" target="_new">源码</a></li>
         </ul>
     </div>
     <div class="container">
