--- a/w/w.html
+++ b/w/w.html
@@ -26,9 +26,9 @@
         <div class="nav">
             <ul class="nav-list">
                 <li><a>首页</a></li>
-                <li><a href="about.html">关于</a></li>
                 <li><a href="html/blog.html">博客</a></li>
                 <li><a href="tool/tool.html">工具箱</a></li>
+                <li><a href="https://github.com/furry19sj/furry19sj.github.io" target="_new">源码</a></li>
             </ul>
         </div>
         <div id="container">
