--- a/logs.html
+++ b/logs.html
@@ -32,8 +32,7 @@
 <body>
     <div id="bg-container"> <!-- 背景容器 -->
         <video autoplay muted loop id="background-video" onerror="console.error('背景视频加载失败');"> <!-- 背景视频 -->
-            <source src="src/background/video.mp4" type="video/mp4"> <!-- 视频源 -->
-            <img src="src/background/1.jpg" alt="备用背景图" id="fallback-image"> <!-- 备用背景图片 -->
+            <img src="src/1.jpg" alt="备用背景图" id="fallback-image"> <!-- 备用背景图片 -->
         </video>
     </div>
     
