--- a/p/p.html
+++ b/p/p.html
@@ -16,7 +16,7 @@
 <body>
     <div id="bg-container">
         <video autoplay muted loop id="background-video" playsinline>
-            <img src="../src/background/1.jpg" alt="备用背景图" id="fallback-image">
+            <img src="../src/1.jpg" alt="备用背景图" id="fallback-image">
         </video>
     </div>
 
