--- a/w/tool/tool.html
+++ b/w/tool/tool.html
@@ -206,7 +206,7 @@
 <body>
     <div id="bg-container">
         <video autoplay muted loop id="background-video">
-            <img src="../src/background/1.jpg" alt="备用背景图" id="fallback-image">
+            <img src="../src/1.jpg" alt="备用背景图" id="fallback-image">
         </video>
     </div>
     <button onclick="topFunction()" id="myBtn"><img src="../src/favicon.png" class="Back-to-top"></button>
