--- a/w/w.html
+++ b/w/w.html
@@ -116,7 +116,7 @@
     </div>
 
     <div class="footer">
-        禁止在未授权的情况下使用任何内容，包括但不限于修改源码建站、转载、使用图片、视频等。
+        <p>禁止在未授权的情况下使用任何内容，包括但不限于修改源码建站、转载、使用图片、视频等。
         允许学习，可<a href="https://github.com/furry19sj/furry19sj.github.io" target="_new">前往GitHub查看源代码</a>。</p>
     </div>
 </body>
