--- a/No-cell-phones.html
+++ b/No-cell-phones.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No cell phones</title>
+    <style>body {text-align: center;}</style>
 </head>
 <body>
     <h1>禁止访问</h1>
