--- a/w/w.html
+++ b/w/w.html
@@ -105,7 +105,7 @@
             
             <div id="content">
                 <!-- 置顶内容区域 -->
-                <div class="content-box" style="color:yellow; background-color: red;">
+                <div class="content-box" style="color:yellow; background-color: red;display:none;">
                     <p>↑置顶</p>
                     <h1>2024/10/1 国庆节</h1>
                     <p>九州日丽，国趋昌盛人趋富；四化春新，花爱阳春果爱秋。走遍祖国最想母亲，走遍世界最想祖国。举国上下共庆贺，祝愿祖国更强大。国庆又逢仲秋月圆，伟大祖国大好河山，蒸蒸日上繁荣富强，神州共奔富丽康庄。庆国庆，大家齐欢乐，五十六个民族共欢腾，祝我们的祖国欣欣向荣！神州大地繁花似锦，祖国长空乐曲如潮。在这美好日子里，让我们用最真挚的祝福伴您度过。</p>
